# chat-gpt-ideas

./: .env  Cargo.toml  README.md  READMe.md  t  test.txt
src/: guessing_game.rs  main.rs  temp_converter.rs
src/helpers/fetch/: Cargo.toml
src/helpers/fetch/src/: lib.rs
src/helpers/utils/src/: lib.rs
src/libs/currency_converter/: Cargo.toml
src/libs/currency_converter/src/: lib.rs
src/libs/file_analyzer/: Cargo.toml
src/libs/file_analyzer/src/: lib.rs
src/libs/guessing_game/src/: lib.rs
src/libs/temp_conv/src/: lib.rs
src/libs/todo_list/src/: lib.rs
src/libs/url_shortener/src/: lib.rs
src/libs/web_scrapper/: Cargo.toml
src/libs/web_scrapper/src/: lib.rs
src/libs/word_count/: Cargo.toml
src/libs/word_count/src/: lib.rs
